--- a/style.css
+++ b/style.css
@@ -52,10 +52,15 @@ section p {
 /* GALLERY */
 .gallery .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 24px;
   margin-top: 30px;
+  justify-items: center;
 }
+.gallery img {
+  max-width: 100%;
+}
+
 
 .gallery img {
   width: 100%;
@@ -78,5 +83,6 @@ footer {
   padding: 20px;
   font-size: 14px;
 }
+
 
 
