--- a/style-final.css
+++ b/style-final.css
@@ -255,4 +255,22 @@ footer {
     text-align: center;
   }
 }
+.caption {
+  padding: 14px 16px 18px;
+  text-align: center;
+}
+
+.caption strong {
+  display: block;
+  font-size: 15px;
+  font-weight: 600;
+  margin-bottom: 6px;
+}
+
+.caption em {
+  font-size: 13.5px;
+  color: #555;
+  line-height: 1.5;
+}
+
 
